Bug 137381 - Chapter numbering preview inconsistent with dark theme
Summary: Chapter numbering preview inconsistent with dark theme
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.1.2 release
Hardware: All Linux (All)
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:7.4.0 target:7.3.2
Keywords:
: 146541 (view as bug list)
Depends on:
Blocks: Heading-Numbering-Dialog Linux-Dark-Mode
  Show dependency treegraph
 
Reported: 2020-10-10 10:49 UTC by medmedin2014
Modified: 2022-03-10 11:47 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Chapter number preview (49.08 KB, image/png)
2020-10-10 10:49 UTC, medmedin2014
Details
Chapter number problem (634.45 KB, video/mp4)
2021-04-27 18:36 UTC, medmedin2014
Details

Note You need to log in before you can comment on or make changes to this bug.
Description medmedin2014 2020-10-10 10:49:11 UTC
Created attachment 166249 [details]
Chapter number preview

When I use dark breeze theme with Writer, the preview of chapter numbering is not consistent with dark theme. See attached image for more info.

Version: 7.0.1.2
Build ID: 00(Build:2)
CPU threads: 2; OS: Linux 5.4; UI render: default; VCL: kf5
Locale: en-US (en_US.UTF-8); UI: en-US
=7.0.1-1
Calc: threaded

Operating System: Manjaro Linux
KDE Plasma Version: 5.19.5
KDE Frameworks Version: 5.74.0
Qt Version: 5.15.1
Kernel Version: 5.4.67-1-MANJARO
OS Type: 64-bit
Comment 1 Dieter 2021-04-27 15:17:21 UTC
Medmedin, unfortunately nobody could confirm this bug report during the last months. So I'd like to ask, if it is still valid. Could you please try to reproduce it with the latest version of LibreOffice from https://www.libreoffice.org/download/libreoffice-fresh/ ? I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' if the bug is still present in the latest version.
Comment 2 medmedin2014 2021-04-27 18:36:17 UTC
Created attachment 171463 [details]
Chapter number problem
Comment 3 QA Administrators 2021-04-28 03:51:39 UTC Comment hidden (obsolete)
Comment 4 Dieter 2022-02-17 22:01:18 UTC
*** Bug 146541 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2022-02-18 20:13:24 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/87aeb7be943921942f791cd182122e8e073ce804

Resolves tdf#137381 - Use app colors on chapter numbering preview

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2022-03-02 05:30:41 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/a0ad72cb1404544ae0a3c3062431ed22edb7fa21

Resolves tdf#137381 - Use app colors on chapter numbering preview

It will be available in 7.3.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.