Resolves tdf#137381 - Use app colors on chapter numbering preview

Change-Id: I8e5edec1ad6f4b6f44855014ce91a642efbd75f9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/130133
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
(cherry picked from commit 87aeb7be943921942f791cd182122e8e073ce804)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/130154
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>